=======
CHANGES
=======

1.5.0 (unreleased)
------------------

- Feature: Added layout support for ``IAdding`` component based add forms.

- Feature: Added CSS for multi-widget which was added in `z3c.form` 2.0.0

- Bug: Changed usage of "template/macros/*" to "macro:*, because the first
  one doesn't work when we override a form template and use the form macro,
  registered with this package.

1.4.2 (2008-08-26)
------------------

- Bug: Corrected typos and unwanted unicode characters.


1.4.1 (2008-01-23)
------------------

- Fixed up meta-data and the release.


1.4.0 (2008-01-21)
------------------

- Feature: Added subform content and layout template. This allows you to
  configure real sub forms which do not render the form tag.

- Feature: Improve layout implementation, support built-in layout templates.

- Feature: Use ``IContentTemplate`` instead of ``IPageTemplate`` in layout
  base classes. This will help to prevent running into recursion errors if
  there is a missing layout template.

- Feature: Added form module which offers built-in layout support.

- Bug: Added missing display ``IContentTemplate``, otherwise we can run into a
  recursion in some cases.

- Bug: Renamed table macro argument from ``form-required-info`` to
  ``required-info``. The macro ``form-required-info`` did not exist.

- Bug: Added unit tests for layout support.

- Bug: Added tests for layout macros.

- Bug: Added tests for layout templates.


1.3.0 (2007-08-24)
------------------

- Refactoring: Update CSS classes to reflect latest changes to the widget
  classes in ``z3c.form``.

- Bug: Error view snippets may have a empty ``widget`` attribute values, so we
  cannot rely on accessing the label of the widget. This is the case, if the
  error view sniipet was created from an invariants validation error.

- Bug: The table-form template did not properly render the error at the
  widget, because the ``render()`` method was not called. Thanks to Markus
  Leist for the report.

