@@ -1,15 +1,25 @@
 [buildout]
-develop = .
+develop =
+  .
+  ../z3c.form
+  ../z3c.macro
+  ../z3c.pt
 parts = test coverage-test coverage-report
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.formui [test]
+environment = test-environment
+
+[test-environment]
+CHAMELEON_DEBUG = False
+CHAMELEON_CACHE = False
 
 [coverage-test]
 recipe = zc.recipe.testrunner
 eggs = z3c.formui [test]
 defaults = ['--coverage', '../../coverage']
+environment = test-environment
 
 [coverage-report]
 recipe = zc.recipe.egg
